RESOLVED FIXED126974
[Mac] WebKit2 leaks sudden termination assertions when a page with unload handlers is closed
https://bugs.webkit.org/show_bug.cgi?id=126974
Summary [Mac] WebKit2 leaks sudden termination assertions when a page with unload han...
Mark Rowe (bdash)
Reported 2014-01-14 03:07:13 PST
* STEPS TO REPRODUCE 1. Run Safari under the Sudden Termination instrument in Instruments. 2. Wait for a minute or two until everything has settled down. 3. Load <http://imgur.com/YeY7H76> in a new tab. 4. Close the new tab from 3. 5. Repeat 3-4 a few more times. * RESULTS The disable count grows each time. * NOTES It looks as though the web process makes the relevant ChromeClient call prior to exiting, but the UI process never receives it. <rdar://problem/15812954>
Attachments
Patch (3.26 KB, patch)
2014-01-14 03:12 PST, Mark Rowe (bdash)
no flags
Mark Rowe (bdash)
Comment 1 2014-01-14 03:12:10 PST
WebKit Commit Bot
Comment 2 2014-01-14 13:15:03 PST
Comment on attachment 221137 [details] Patch Clearing flags on attachment: 221137 Committed r161998: <http://trac.webkit.org/changeset/161998>
WebKit Commit Bot
Comment 3 2014-01-14 13:15:05 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.